--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "role": "Developer"
         }
     ],
-    "require": {
+    "require-dev": {
         "guzzlehttp/guzzle": "^6.3",
         "phpunit/phpunit": "^4.8"
     },
